--- a/views/VisibleMemos.ejs
+++ b/views/VisibleMemos.ejs
@@ -2,6 +2,7 @@
   <head>
     <title> Visible Memos </title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+     <script src="/assets/todo-list.js"></script>
     <link href="assets/styles.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
@@ -12,10 +13,11 @@
       </form>
     </div>
     <div>
+      <br><br>
       <ul>
-        <li> Item 1 </li>
-        <li> Item 2 </li>
-        <li> Item 3 </li>
+        <% for( var i = 0; i < currentNotes.length; i++ ){ %>
+            <li><%=currentNotes[i].noteText%></li>
+        <% } %>
       </ul>
     </div>
   </body>
